[package]
name = "simple-gossip"
version = "0.1.0"
authors = ["owencp <owen@cryptape.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
tokio = "0.2"
tentacle = { version = "0.3", features = ["molc"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.3"
